// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WikiMarkup => ADF Formatters - citation [CS-491] should detect mention in the following pattern 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hi ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "78032763-2feb-4f5b-88c0-99b50613d53a",
            "localId": null,
            "text": "",
            "userType": null,
          },
          "type": "mention",
        },
        {
          "text": ",",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - citation [CS-1896] Should convert empty mention to plaintext 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hi [~accountid:], your text is so plain, almost as plain as [~]",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - citation Should convert mention without context 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hi ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "accountid:78032763-2feb-4f5b-88c0-99b50613d53a",
            "localId": null,
            "text": "",
            "userType": null,
          },
          "type": "mention",
        },
        {
          "text": ",",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`WikiMarkup => ADF Formatters - citation should convert mention with context case-insensitively 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "Hi ",
          "type": "text",
        },
        {
          "attrs": {
            "accessLevel": "",
            "id": "aAaAaA",
            "localId": null,
            "text": "",
            "userType": null,
          },
          "type": "mention",
        },
        {
          "text": ",",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
